@@ -21,7 +21,7 @@ class HarvestMigration extends MigrateDKAN {
   /**
    * {@inheritdoc}
    */
-  static public function getInstance($machine_name, $class_name = NULL, array $arguments = array()) {
+  public static function getInstance($machine_name, $class_name = NULL, array $arguments = array()) {
     // Reset the cache entry for this specific migration. to make sure the
     // arguments are always fresh.
     $migrations = &drupal_static(__FUNCTION__, array());
@@ -290,7 +290,7 @@ class HarvestMigration extends MigrateDKAN {
    * associated resources if dkan_workflow is enabled.
    *
    * @param object $dataset
-   *        Entity object.
+   *   Entity object.
    */
   private function moderatePublish($dataset) {
     // Publish dataset.
@@ -298,7 +298,7 @@ class HarvestMigration extends MigrateDKAN {
       workbench_moderation_moderate($dataset, 'needs_review');
       workbench_moderation_moderate($dataset, 'published');
 
-      //Publish resources.
+      // Publish resources.
       if (!empty($dataset->field_resources[LANGUAGE_NONE])) {
         foreach ($dataset->field_resources[LANGUAGE_NONE] as $data) {
           $resource = node_load($data['target_id']);
@@ -318,9 +318,9 @@ class HarvestMigration extends MigrateDKAN {
    * replace them.
    *
    * @param object $dataset
-   *        Entity where resources are going to be added.
+   *   Entity where resources are going to be added.
    * @param object $row
-   *        Migration row.
+   *   Migration row.
    */
   private function createResources(&$dataset, stdClass &$row) {
     migrate_instrument_start('HarvestMigration->createResources');
@@ -367,9 +367,9 @@ class HarvestMigration extends MigrateDKAN {
    * Add group nid to the row data.
    *
    * @param object $dataset
-   *        Entity where groups are going to be added.
+   *   Entity where groups are going to be added.
    * @param object $row
-   *        Migration row.
+   *   Migration row.
    */
   private function prepareGroup(&$dataset, stdClass &$row) {
 
@@ -412,7 +412,7 @@ class HarvestMigration extends MigrateDKAN {
    * Prepare an Object usable for HarvestMigration::prepareMetadataSource().
    *
    * @return object
-   *         An object usable for
+   *   An object usable for
    *         HarvestMigration::prepareMetadataSource() or FALSE.
    */
   public static function prepareMetadataSourceHelper($file_uri,
@@ -460,12 +460,12 @@ class HarvestMigration extends MigrateDKAN {
    * Create and attach the metadata-source node related to the dataset imported.
    *
    * @param object $dataset_prepare
-   *        Dataset entity from the Migration::prepare() methode.
+   *   Dataset entity from the Migration::prepare() methode.
    * @param object $row
-   *        Row object from the Migration::prepare() methode.
+   *   Row object from the Migration::prepare() methode.
    *
    * @return mixed
-   *         The created metadata source id.
+   *   The created metadata source id.
    *         Or FALSE if not created.
    */
   private function prepareMetadataSource(&$dataset_prepare, stdClass &$row) {
@@ -822,7 +822,7 @@ class HarvestMigration extends MigrateDKAN {
    * datasets before deleting them.
    *
    * @param array $dataset_nids
-   *        An array of nids of datasets imported.
+   *   An array of nids of datasets imported.
    */
   public function prepareRollback($dataset_nids) {
     foreach ($dataset_nids as $dataset_id) {
@@ -899,6 +899,8 @@ class HarvestMigration extends MigrateDKAN {
     $this->addFieldMapping('field_spatial', 'spatial');
     $this->addFieldMapping('field_spatial_geographical_cover', 'spatial_geographical_cover');
     $this->addFieldMapping('field_frequency', 'frequency');
+    $this->addFieldMapping('field_temporal_coverage', 'temporal_coverage_from');
+    $this->addFieldMapping('field_temporal_coverage:to', 'temporal_coverage_to');
     $this->addFieldMapping('field_contact_name', 'contact_name');
     $this->addFieldMapping('field_contact_email', 'contact_email');
     // $this->addFieldMapping('og_group_ref', 'group_ids');.
@@ -939,12 +941,12 @@ class HarvestMigration extends MigrateDKAN {
    * TODO Probably get this to the MigrateDkan class.
    *
    * @param string $name
-   *        Taxonomy term name.
+   *   Taxonomy term name.
    * @param string $vocab_name
-   *        Taxonomy vocabulary name.
+   *   Taxonomy vocabulary name.
    *
    * @return mixed
-   *         An object term. Or null if failed.
+   *   An object term. Or null if failed.
    */
   public function createTax($name, $vocab_name, $vid = NULL) {
     // Make sure that the vocabulary exists before adding terms.
@@ -981,18 +983,18 @@ class HarvestMigration extends MigrateDKAN {
    * HarvestMigration::createResourceNode().
    *
    * @param string $url
-   *        Resource remote url.
+   *   Resource remote url.
    * @param string $format
-   *        Resource format. Used to get the correct taxonomy term.
+   *   Resource format. Used to get the correct taxonomy term.
    * @param string $title
-   *        Optional resource title. If NULL use the url instead.
+   *   Optional resource title. If NULL use the url instead.
    * @param int $created
-   *        Option creation time.
+   *   Option creation time.
    * @param string $description
-   *        Option body content.
+   *   Option body content.
    *
    * @return object
-   *         Object usable for HarvestMigration::createResourceNode().
+   *   Object usable for HarvestMigration::createResourceNode().
    *         Or FALSE.
    */
   public static function prepareResourceHelper($url, $format = NULL, $title = NULL, $created = NULL, $description = NULL) {
@@ -1095,11 +1097,11 @@ class HarvestMigration extends MigrateDKAN {
    * Create a dkan resource node from the values provided.
    *
    * @param array $res
-   *        Values for the resources node to be created.
+   *   Values for the resources node to be created.
    *        Formated with the self::prepareResourceHelper() method.
    *
    * @return object
-   *         Resource node object.
+   *   Resource node object.
    */
   public function createResourceNode($res) {
     migrate_instrument_start('HarvestMigration->createResourceNode');
@@ -1206,10 +1208,10 @@ class HarvestMigration extends MigrateDKAN {
    * Create a dkan group node from the values provided.
    *
    * @param array $group
-   *        Values for the group node to be created.
+   *   Values for the group node to be created.
    *
    * @return object
-   *         Group node object.
+   *   Group node object.
    */
   public function createGroupNode($group) {
 
@@ -1284,11 +1286,11 @@ class XMLHarvestMigration extends HarvestMigration {
    * @todo Find a cleaner way to just substitute a different mapping class.
    *
    * @param mixed $destination_field
-   *        A machine-name of destination field.
+   *   A machine-name of destination field.
    * @param mixed $source_field
-   *        A name of source field.
+   *   A name of source field.
    * @param bool $warn_on_override
-   *        Set to FALSE to prevent warnings when there's an existing mapping
+   *   Set to FALSE to prevent warnings when there's an existing mapping
    *        for this destination field.
    *
    * @return MigrateXMLFieldMapping
@@ -1346,12 +1348,12 @@ class XMLHarvestMigration extends HarvestMigration {
    * Default implementation - straightforward xpath application.
    *
    * @param object $data_row
-   *        A row containing items.
+   *   A row containing items.
    * @param string $xpath
-   *        An xpath used to find the item.
+   *   An xpath used to find the item.
    *
    * @return SimpleXMLElement
-   *         Found element
+   *   Found element
    */
   public function applyXpath($data_row, $xpath) {
     $result = $data_row->xml->xpath($xpath);
